# Teukolsky-python

./: .gitignore  README.md  environment.gpu.yml  pyproject.toml
.github/workflows/: SmokeTests.yml  UnitTests.yml
scripts/: benchmark_gpu.py  compute_mismatch.py  sample_teukolsky_cases.py
src/teukolsky/: __init__.py  api.py  core.py  detector.py  waveform.py
src/teukolsky/accelerated/: __init__.py  backend.py  convolution.py  dcu_radial_ode.py  radial_dcu.py  validation.py
src/teukolsky/angular/: __init__.py  eigen.py
src/teukolsky/geodesics/: __init__.py  kerr.py
src/teukolsky/modes/: __init__.py  point_particle.py
src/teukolsky/mst/: __init__.py  renormalized.py
src/teukolsky/pn/: __init__.py  series.py
src/teukolsky/radial/: __init__.py  mst_solver.py  sasaki_nakamura.py  solver.py
tests/: test_angular.py  test_api_example.py  test_cross_validation.py  test_dcu_validation.py  test_detector.py  test_equivalence.py  test_memory.py  test_modes.py  test_mst.py  test_orbit.py  test_radial.py  test_waveform.py  test_waveform_few.py
