[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teukolsky"
version = "0.1.0"
description = "Python implementation of Teukolsky equation solvers for Kerr perturbations"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "mpmath",
  "sympy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
